# SmartAsset

./: .gitignore  Dockerfile  LICENSE  README.md  dev.md  docker-compose.yml  env.example  pyproject.toml  requirements-advanced.txt  requirements-dev.txt  requirements.txt  system_design.md
app/: __init__.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: analysis.py  assets.py  auth.py  portfolios.py
app/core/: config.py  database.py  exceptions.py
app/models/: __init__.py  asset.py  base.py  portfolio.py  transaction.py
app/schemas/: __init__.py  analysis.py  asset.py  portfolio.py
app/services/: analysis_service.py  asset_service.py  portfolio_service.py
app/utils/: __init__.py  financial.py
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/v1/: auth.py  chat.py  router.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  chat.py  user.py
backend/app/schemas/: chat.py  user.py
backend/app/services/: llm_service.py
docs/: README.md
frontend/: .env.example  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: layout.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/chat/: page.tsx
frontend/components/auth/: AuthForm.tsx
frontend/components/chat/: ChatArea.tsx  ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx
frontend/components/ui/: button.tsx  input.tsx
frontend/hooks/: useAuth.tsx
frontend/types/: index.ts
logs/: dev.md
scripts/: setup_db.py
tests/: __init__.py  conftest.py
tests/test_api/: test_assets.py
